feat: wrote the diffrent bw drafts and actual to all 3 ep

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,11 @@
 <!-- <app-home></app-home>
 <router-outlet></router-outlet> -->
 
-<app-draft-evalute-component></app-draft-evalute-component>
+<!-- <app-draft-evalute-component></app-draft-evalute-component> -->
+
+<!-- <app-datamodeller></app-datamodeller> -->
+
+
+
+<app-fluent-selector></app-fluent-selector>
 
