--- a/src/app/component/home/home.html
+++ b/src/app/component/home/home.html
@@ -16,9 +16,20 @@
     Event
   </button>
 
-  <button class="nav-btn api5" (click)="navigateTo('api5')">
+  <button class="nav-btn api5" (click)="navigateTo('draft-evaluate')">
     draft-evaluate
   </button>
+
+
+  <button class="nav-btn api5" (click)="navigateTo('data-modeller')">
+    draft-evaluate
+  </button>
+
+
+
+
+
+
 
 
 <!--
