--- a/src/app/component/draft-evalute-component/draft-evalute-component.html
+++ b/src/app/component/draft-evalute-component/draft-evalute-component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loading">Loading...</div>
+<!-- <div *ngIf="loading">Loading...</div>
 
 <div *ngFor="let item of evaluatedData" class="card">
 
@@ -13,33 +13,12 @@
 
     <tr *ngFor="let diff of item.differences">
       <td>{{ diff.field }}</td>
-      <td style="color: green">{{ diff.draftValue  }}</td>
-      <td style="color: red">{{ diff.actualValue }}</td>
+      <td style="color: green">{{ diff.draftValue |json  }}</td>
+      <td style="color: red">{{ diff.actualValue | json}}</td>
     </tr>
   </table>
 
   <p *ngIf="item.differences.length === 0">
-    No Differences
-  </p>
-
-</div>
-
-
-
-<!--
-<div *ngIf="loading">Loading...</div>
-
-<div *ngFor="let item of evaluatedData" class="card" style="margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 8px;">
-
-  <h3>{{ item.appArtifactName }} ({{ item.state }})</h3>
-
-  <div *ngIf="item.differences.length > 0">
-    <pre style="background: #f5f5f5; padding: 10px; border-radius: 5px; overflow-x: auto; color: black;">
-{{ displayValue(item.differences) }}
-    </pre>
-  </div>
-
-  <p *ngIf="item.differences.length === 0" style="color: gray; font-style: italic;">
     No Differences
   </p>
 
@@ -51,7 +30,41 @@
 
 
 
-<!-- <div *ngIf="loading">Loading...</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- MAIN HTML -->
+
+
+ <div *ngIf="loading">Loading...</div>
 
 <div *ngIf="errorMessage" style="color:red;">
   {{ errorMessage }}
@@ -110,6 +123,45 @@
     No Differences
   </p>
 
+</div>
+
+
+
+
+
+
+
+<!-- <div *ngIf="loading" style="font-weight:bold; margin:10px 0;">Loading...</div>
+
+<div *ngIf="errorMessage" style="color:red; margin:10px 0;">{{ errorMessage }}</div>
+
+<div *ngFor="let item of evaluatedData" class="card" style="margin-bottom:20px; padding:10px; border:1px solid #ccc; border-radius:5px;">
+  <h3>{{ item.appArtifactName }} ({{ item.state }})</h3>
+
+  <table border="1" width="100%" *ngIf="item.differences.length > 0">
+    <tr>
+      <th>Field</th>
+      <th>Draft</th>
+      <th>Actual</th>
+    </tr>
+
+    <tr *ngFor="let diff of item.differences">
+      <td>{{ diff.field }}</td>
+
+      <td style="color: green; vertical-align: top;">
+        <pre style="margin:0; font-family: monospace; white-space: pre-wrap; word-break: break-word; overflow: break-word; ">
+  {{ formatCell(diff.draftValue) }}
+        </pre>
+      </td>
+
+      <td style="color: red; vertical-align: top;">
+        <pre style="margin:0; font-family: monospace; white-space: pre-wrap; word-break: break-word;">
+  {{ formatCell(diff.actualValue) }}
+        </pre>
+      </td>
+    </tr>
+  </table>
+  <p *ngIf="item.differences.length === 0" style="color: gray; font-style: italic;">No Differences</p>
 </div> -->
 
 
@@ -119,9 +171,7 @@
 
 
 
-
-
-
+<!-- new one  -->
 
 
 
