Rendered the difference between drf and actual in DE,DM,FS

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,5 @@
-<!-- <app-home></app-home>
-<router-outlet></router-outlet> -->
-
-<!-- <app-draft-evalute-component></app-draft-evalute-component> -->
+<app-home></app-home>
+<router-outlet></router-outlet>
 
 <!-- <app-datamodeller></app-datamodeller> -->
-
-
-
-<app-fluent-selector></app-fluent-selector>
 
