--- a/src/app/component/home/home.html
+++ b/src/app/component/home/home.html
@@ -22,8 +22,15 @@
 
 
   <button class="nav-btn api5" (click)="navigateTo('data-modeller')">
-    draft-evaluate
+    data-modeller
   </button>
+
+
+  <button class="nav-btn api5" (click)="navigateTo('fluent-service')">
+    fluent-service
+  </button>
+
+
 
 
 
